cmake_minimum_required(VERSION 3.7)
project(ProMon)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        dimin/injector.cc
        dimin/probe.c
        dimin/testapp.c
        dwarf-20140413/dwarfdump/addrmap.c
        dwarf-20140413/dwarfdump/addrmap.h
        dwarf-20140413/dwarfdump/checkutil.c
        dwarf-20140413/dwarfdump/checkutil.h
        dwarf-20140413/dwarfdump/common.c
        dwarf-20140413/dwarfdump/common.h
        dwarf-20140413/dwarfdump/config.h
        dwarf-20140413/dwarfdump/dwarf_tsearch.h
        dwarf-20140413/dwarfdump/dwarf_tsearchbal.c
        dwarf-20140413/dwarfdump/dwarfdump.c
        dwarf-20140413/dwarfdump/dwconf.c
        dwarf-20140413/dwarfdump/dwconf.h
        dwarf-20140413/dwarfdump/esb.c
        dwarf-20140413/dwarfdump/esb.h
        dwarf-20140413/dwarfdump/globals.h
        dwarf-20140413/dwarfdump/makename.c
        dwarf-20140413/dwarfdump/makename.h
        dwarf-20140413/dwarfdump/naming.c
        dwarf-20140413/dwarfdump/naming.h
        dwarf-20140413/dwarfdump/print_abbrevs.c
        dwarf-20140413/dwarfdump/print_aranges.c
        dwarf-20140413/dwarfdump/print_die.c
        dwarf-20140413/dwarfdump/print_frames.c
        dwarf-20140413/dwarfdump/print_frames.h
        dwarf-20140413/dwarfdump/print_lines.c
        dwarf-20140413/dwarfdump/print_locs.c
        dwarf-20140413/dwarfdump/print_macros.c
        dwarf-20140413/dwarfdump/print_pubnames.c
        dwarf-20140413/dwarfdump/print_ranges.c
        dwarf-20140413/dwarfdump/print_reloc.c
        dwarf-20140413/dwarfdump/print_reloc.h
        dwarf-20140413/dwarfdump/print_sections.c
        dwarf-20140413/dwarfdump/print_sections.h
        dwarf-20140413/dwarfdump/print_static_funcs.c
        dwarf-20140413/dwarfdump/print_static_vars.c
        dwarf-20140413/dwarfdump/print_strings.c
        dwarf-20140413/dwarfdump/print_types.c
        dwarf-20140413/dwarfdump/print_weaknames.c
        dwarf-20140413/dwarfdump/strstrnocase.c
        dwarf-20140413/dwarfdump/tag_attr.c
        dwarf-20140413/dwarfdump/tag_common.c
        dwarf-20140413/dwarfdump/tag_common.h
        dwarf-20140413/dwarfdump/tag_tree.c
        dwarf-20140413/dwarfdump/testesb.c
        dwarf-20140413/dwarfdump/tmp-t1.c
        dwarf-20140413/dwarfdump/tmp-t2.c
        dwarf-20140413/dwarfdump/tmp-t3.c
        dwarf-20140413/dwarfdump/tmp-t4.c
        dwarf-20140413/dwarfdump/tmp-ta-ext-table.c
        dwarf-20140413/dwarfdump/tmp-ta-table.c
        dwarf-20140413/dwarfdump/tmp-tt-ext-table.c
        dwarf-20140413/dwarfdump/tmp-tt-table.c
        dwarf-20140413/dwarfdump/uri.c
        dwarf-20140413/dwarfdump/uri.h
        dwarf-20140413/dwarfdump/uritablebuild.c
        dwarf-20140413/dwarfdump2/checkutil.cc
        dwarf-20140413/dwarfdump2/checkutil.h
        dwarf-20140413/dwarfdump2/common.cc
        dwarf-20140413/dwarfdump2/common.h
        dwarf-20140413/dwarfdump2/config.h
        dwarf-20140413/dwarfdump2/dieholder.h
        dwarf-20140413/dwarfdump2/dwarfdump.cc
        dwarf-20140413/dwarfdump2/dwconf.cc
        dwarf-20140413/dwarfdump2/dwconf.h
        dwarf-20140413/dwarfdump2/fderegs.h
        dwarf-20140413/dwarfdump2/globals.h
        dwarf-20140413/dwarfdump2/naming.cc
        dwarf-20140413/dwarfdump2/naming.h
        dwarf-20140413/dwarfdump2/print_abbrevs.cc
        dwarf-20140413/dwarfdump2/print_aranges.cc
        dwarf-20140413/dwarfdump2/print_die.cc
        dwarf-20140413/dwarfdump2/print_frames.cc
        dwarf-20140413/dwarfdump2/print_frames.h
        dwarf-20140413/dwarfdump2/print_lines.cc
        dwarf-20140413/dwarfdump2/print_locs.cc
        dwarf-20140413/dwarfdump2/print_macros.cc
        dwarf-20140413/dwarfdump2/print_pubnames.cc
        dwarf-20140413/dwarfdump2/print_ranges.cc
        dwarf-20140413/dwarfdump2/print_reloc.cc
        dwarf-20140413/dwarfdump2/print_reloc.h
        dwarf-20140413/dwarfdump2/print_sections.cc
        dwarf-20140413/dwarfdump2/print_sections.h
        dwarf-20140413/dwarfdump2/print_static_funcs.cc
        dwarf-20140413/dwarfdump2/print_static_vars.cc
        dwarf-20140413/dwarfdump2/print_strings.cc
        dwarf-20140413/dwarfdump2/print_types.cc
        dwarf-20140413/dwarfdump2/print_weaknames.cc
        dwarf-20140413/dwarfdump2/srcfilesholder.h
        dwarf-20140413/dwarfdump2/strstrnocase.cc
        dwarf-20140413/dwarfdump2/tag_attr.cc
        dwarf-20140413/dwarfdump2/tag_common.cc
        dwarf-20140413/dwarfdump2/tag_common.h
        dwarf-20140413/dwarfdump2/tag_tree.cc
        dwarf-20140413/dwarfdump2/test_printfuncs.cc
        dwarf-20140413/dwarfdump2/tmp-t1.cc
        dwarf-20140413/dwarfdump2/tmp-t2.cc
        dwarf-20140413/dwarfdump2/tmp-t3.cc
        dwarf-20140413/dwarfdump2/tmp-t4.cc
        dwarf-20140413/dwarfdump2/tmp-ta-ext-table.cc
        dwarf-20140413/dwarfdump2/tmp-ta-table.cc
        dwarf-20140413/dwarfdump2/tmp-tt-ext-table.cc
        dwarf-20140413/dwarfdump2/tmp-tt-table.cc
        dwarf-20140413/dwarfdump2/uri.cc
        dwarf-20140413/dwarfdump2/uri.h
        dwarf-20140413/dwarfexample/frame1.c
        dwarf-20140413/dwarfexample/simplereader.c
        dwarf-20140413/dwarfgen/config.h
        dwarf-20140413/dwarfgen/createirepformfrombinary.cc
        dwarf-20140413/dwarfgen/createirepfrombinary.cc
        dwarf-20140413/dwarfgen/createirepfrombinary.h
        dwarf-20140413/dwarfgen/dwarfgen.cc
        dwarf-20140413/dwarfgen/general.h
        dwarf-20140413/dwarfgen/irepattrtodbg.cc
        dwarf-20140413/dwarfgen/irepattrtodbg.h
        dwarf-20140413/dwarfgen/irepdie.h
        dwarf-20140413/dwarfgen/irepform.h
        dwarf-20140413/dwarfgen/irepframe.h
        dwarf-20140413/dwarfgen/irepline.h
        dwarf-20140413/dwarfgen/irepmacro.h
        dwarf-20140413/dwarfgen/ireppubnames.h
        dwarf-20140413/dwarfgen/irepresentation.h
        dwarf-20140413/dwarfgen/ireptodbg.cc
        dwarf-20140413/dwarfgen/ireptodbg.h
        dwarf-20140413/dwarfgen/strtabdata.h
        dwarf-20140413/libdwarf/cmplrs/dwarf_addr_finder.h
        dwarf-20140413/libdwarf/common.c
        dwarf-20140413/libdwarf/common.h
        dwarf-20140413/libdwarf/config.h
        dwarf-20140413/libdwarf/dwarf.h
        dwarf-20140413/libdwarf/dwarf_abbrev.c
        dwarf-20140413/libdwarf/dwarf_abbrev.h
        dwarf-20140413/libdwarf/dwarf_addr_finder.c
        dwarf-20140413/libdwarf/dwarf_alloc.c
        dwarf-20140413/libdwarf/dwarf_alloc.h
        dwarf-20140413/libdwarf/dwarf_arange.c
        dwarf-20140413/libdwarf/dwarf_arange.h
        dwarf-20140413/libdwarf/dwarf_base_types.h
        dwarf-20140413/libdwarf/dwarf_die_deliv.c
        dwarf-20140413/libdwarf/dwarf_die_deliv.h
        dwarf-20140413/libdwarf/dwarf_elf_access.c
        dwarf-20140413/libdwarf/dwarf_elf_access.h
        dwarf-20140413/libdwarf/dwarf_error.c
        dwarf-20140413/libdwarf/dwarf_error.h
        dwarf-20140413/libdwarf/dwarf_form.c
        dwarf-20140413/libdwarf/dwarf_frame.c
        dwarf-20140413/libdwarf/dwarf_frame.h
        dwarf-20140413/libdwarf/dwarf_frame2.c
        dwarf-20140413/libdwarf/dwarf_frame3.c
        dwarf-20140413/libdwarf/dwarf_funcs.c
        dwarf-20140413/libdwarf/dwarf_funcs.h
        dwarf-20140413/libdwarf/dwarf_global.c
        dwarf-20140413/libdwarf/dwarf_global.h
        dwarf-20140413/libdwarf/dwarf_harmless.c
        dwarf-20140413/libdwarf/dwarf_harmless.h
        dwarf-20140413/libdwarf/dwarf_incl.h
        dwarf-20140413/libdwarf/dwarf_init_finish.c
        dwarf-20140413/libdwarf/dwarf_leb.c
        dwarf-20140413/libdwarf/dwarf_line.c
        dwarf-20140413/libdwarf/dwarf_line.h
        dwarf-20140413/libdwarf/dwarf_line2.c
        dwarf-20140413/libdwarf/dwarf_loc.c
        dwarf-20140413/libdwarf/dwarf_loc.h
        dwarf-20140413/libdwarf/dwarf_macro.c
        dwarf-20140413/libdwarf/dwarf_macro.h
        dwarf-20140413/libdwarf/dwarf_names.c
        dwarf-20140413/libdwarf/dwarf_names.h
        dwarf-20140413/libdwarf/dwarf_names_enum.h
        dwarf-20140413/libdwarf/dwarf_names_new.h
        dwarf-20140413/libdwarf/dwarf_opaque.h
        dwarf-20140413/libdwarf/dwarf_original_elf_init.c
        dwarf-20140413/libdwarf/dwarf_print_lines.c
        dwarf-20140413/libdwarf/dwarf_pubtypes.c
        dwarf-20140413/libdwarf/dwarf_query.c
        dwarf-20140413/libdwarf/dwarf_ranges.c
        dwarf-20140413/libdwarf/dwarf_reloc_arm.h
        dwarf-20140413/libdwarf/dwarf_reloc_mips.h
        dwarf-20140413/libdwarf/dwarf_reloc_ppc.h
        dwarf-20140413/libdwarf/dwarf_reloc_ppc64.h
        dwarf-20140413/libdwarf/dwarf_reloc_x86_64.h
        dwarf-20140413/libdwarf/dwarf_sort_line.c
        dwarf-20140413/libdwarf/dwarf_string.c
        dwarf-20140413/libdwarf/dwarf_stubs.c
        dwarf-20140413/libdwarf/dwarf_tsearch.h
        dwarf-20140413/libdwarf/dwarf_tsearchhash.c
        dwarf-20140413/libdwarf/dwarf_types.c
        dwarf-20140413/libdwarf/dwarf_types.h
        dwarf-20140413/libdwarf/dwarf_util.c
        dwarf-20140413/libdwarf/dwarf_util.h
        dwarf-20140413/libdwarf/dwarf_vars.c
        dwarf-20140413/libdwarf/dwarf_vars.h
        dwarf-20140413/libdwarf/dwarf_weaks.c
        dwarf-20140413/libdwarf/dwarf_weaks.h
        dwarf-20140413/libdwarf/gennames.c
        dwarf-20140413/libdwarf/libdwarf.h
        dwarf-20140413/libdwarf/libdwarfdefs.h
        dwarf-20140413/libdwarf/malloc_check.c
        dwarf-20140413/libdwarf/malloc_check.h
        dwarf-20140413/libdwarf/pro_alloc.c
        dwarf-20140413/libdwarf/pro_alloc.h
        dwarf-20140413/libdwarf/pro_arange.c
        dwarf-20140413/libdwarf/pro_arange.h
        dwarf-20140413/libdwarf/pro_die.c
        dwarf-20140413/libdwarf/pro_die.h
        dwarf-20140413/libdwarf/pro_encode_nm.c
        dwarf-20140413/libdwarf/pro_encode_nm.h
        dwarf-20140413/libdwarf/pro_error.c
        dwarf-20140413/libdwarf/pro_error.h
        dwarf-20140413/libdwarf/pro_expr.c
        dwarf-20140413/libdwarf/pro_expr.h
        dwarf-20140413/libdwarf/pro_finish.c
        dwarf-20140413/libdwarf/pro_forms.c
        dwarf-20140413/libdwarf/pro_frame.c
        dwarf-20140413/libdwarf/pro_frame.h
        dwarf-20140413/libdwarf/pro_funcs.c
        dwarf-20140413/libdwarf/pro_incl.h
        dwarf-20140413/libdwarf/pro_init.c
        dwarf-20140413/libdwarf/pro_line.c
        dwarf-20140413/libdwarf/pro_line.h
        dwarf-20140413/libdwarf/pro_macinfo.c
        dwarf-20140413/libdwarf/pro_macinfo.h
        dwarf-20140413/libdwarf/pro_opaque.h
        dwarf-20140413/libdwarf/pro_pubnames.c
        dwarf-20140413/libdwarf/pro_reloc.c
        dwarf-20140413/libdwarf/pro_reloc.h
        dwarf-20140413/libdwarf/pro_reloc_stream.c
        dwarf-20140413/libdwarf/pro_reloc_stream.h
        dwarf-20140413/libdwarf/pro_reloc_symbolic.c
        dwarf-20140413/libdwarf/pro_reloc_symbolic.h
        dwarf-20140413/libdwarf/pro_section.c
        dwarf-20140413/libdwarf/pro_section.h
        dwarf-20140413/libdwarf/pro_types.c
        dwarf-20140413/libdwarf/pro_types.h
        dwarf-20140413/libdwarf/pro_util.h
        dwarf-20140413/libdwarf/pro_vars.c
        dwarf-20140413/libdwarf/pro_weaks.c
        dwarf-20140413/tsearch/config.h
        dwarf-20140413/tsearch/dwarf_incl.h
        dwarf-20140413/tsearch/dwarf_tsearch.h
        dwarf-20140413/tsearch/dwarf_tsearchbal.c
        dwarf-20140413/tsearch/dwarf_tsearchbin.c
        dwarf-20140413/tsearch/dwarf_tsearchepp.c
        dwarf-20140413/tsearch/dwarf_tsearchhash.c
        dwarf-20140413/tsearch/dwarf_tsearchred.c
        dwarf-20140413/tsearch/tsearch.c
        dwarf-20140413/tsearch/tsearch_tester.c
        dwarf-20140413/config.h
        mpitest/testmpi.c
        probe/probe.cc
        probe/probe.h
        probe/probe_1.cc
        probe/probe_3.cc
        probe/probe_no_string.cc
        probe/probe_orig.cc
        test/testapp.c
        tinyxml/tinystr.cpp
        tinyxml/tinystr.h
        tinyxml/tinyxml.cpp
        tinyxml/tinyxml.h
        tinyxml/tinyxmlerror.cpp
        tinyxml/tinyxmlparser.cpp
        tinyxml/xmltest.cpp
        analyzer.cc
        analyzer.h
        flowGraph.cc
        injector.cc
        injector.h
        parser.cc
        parser.h
        predefs.h
        report.cc
        server.cc
        server.h
        serverEPoll.cc
        serverEPoll.h
        serverMsgQueue.cc
        serverMsgQueue.h
        serverPOSIX.cc
        serverPOSIX.h
        serverTCP.cc
        serverTCP.h
        serverUDP.cc
        serverUDP.h
        util.cc
        util.h)

add_executable(ProMon ${SOURCE_FILES})